--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,3 +7,7 @@ spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+info.app.name=@project.name@
