login com senha do cartão

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.profiles.active=test
+
+api.cartoes.url=${http://localhost:8888/api/cartoes}
+api.status.documento=${http://localhost:9999/api/solicitacao}
+
+server.port=8080
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/proposta-cartao
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:18080/auth/realms/proposta-cartao/protocol/openid-connect/certs
