--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,3 +11,10 @@ spring.jpa.properties.hibernate.format_sql=true
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 info.app.name=@project.name@
+
+api.cartoes.url=${http://localhost:8888/api/cartoes}
+api.status.documento=${http://localhost:9999/api/solicitacao}
+
+server.port=8080
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/proposta-cartao
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:18080/auth/realms/proposta-cartao/protocol/openid-connect/certs
