--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ api.status.documento=${http://localhost:9999/api/solicitacao}
 server.port=8080
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/proposta-cartao
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:18080/auth/realms/proposta-cartao/protocol/openid-connect/certs
+
+opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
+opentracing.jaeger.service-name=${spring.application.name}
+opentracing.jaeger.http-sender.url=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
+opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
