--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=info,health,prometheus
 info.app.name=@project.name@
 
 api.cartoes.url=${http://localhost:8888/api/cartoes}
