--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
 opentracing.jaeger.service-name=${spring.application.name}
 opentracing.jaeger.http-sender.url=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
 opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
+
+management.endpoints.web.exposure.include=info,health,prometheus
